fixed popup so that you can't scroll main page behind while popup is open

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -244,6 +244,7 @@ header{
 	#full-cal-link {
 		font-size: 0.8em;
 		margin-top: 2em;
+		text-align: center;
 
 		i {
 			font-size: 1em;
@@ -295,6 +296,7 @@ header{
 
 .theology{
 	h4{
+		cursor: pointer;
 		margin: 0;
 		text-transform: lowercase;
 	}
@@ -332,7 +334,7 @@ header{
 				margin: 0;
 				max-width: 100%;
 				padding: 0;
-				width: 25em;
+				width: 40em;
 			}
 		}
 
@@ -437,7 +439,7 @@ header{
 			}
 
 			.desc-cont {
-				max-height: 75vh;
+				max-height: 73vh;
 				overflow-y: auto;
 			}
 
